--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,2 +1,8 @@
 Version history
 ===============
+
+1.0 (2019-11-26):
+
+- initial release
+- added: password field validation
+- added: support account settings form
